[gd_scene load_steps=4 format=3 uid="uid://coqfpluxwiclo"]

[ext_resource type="Theme" uid="uid://b1woour2wjax0" path="res://assets/themes/theme_options.tres" id="1_dgvto"]
[ext_resource type="Script" uid="uid://dilunky7p71fm" path="res://ui/menu/options_menu.gd" id="2_krdqx"]
[ext_resource type="Script" uid="uid://bmwueb2ifttal" path="res://ui/menu/menu_utils.gd" id="3_dgvto"]

[node name="options_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dgvto")
script = ExtResource("2_krdqx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -20

[node name="label_title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainerGame" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="button_game" type="Button" parent="VBoxContainer/MarginContainerGame"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
text = "Game"

[node name="MarginContainerAudio" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="button_audio" type="Button" parent="VBoxContainer/MarginContainerAudio"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
text = "Audio"

[node name="MarginContainerVideo" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="button_video" type="Button" parent="VBoxContainer/MarginContainerVideo"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
text = "Video"

[node name="MarginContainerKeyBoard" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="button_keyboard" type="Button" parent="VBoxContainer/MarginContainerKeyBoard"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
text = "KeyBoard"

[node name="spacing" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainerBack" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="button_back_to_main" type="Button" parent="VBoxContainer/MarginContainerBack"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
text = "Back"

[node name="menu_utils" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_dgvto")

[connection signal="mouse_entered" from="VBoxContainer/MarginContainerGame/button_game" to="." method="_on_button_game_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/MarginContainerGame/button_game" to="." method="_on_button_game_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/MarginContainerAudio/button_audio" to="." method="_on_button_audio_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/MarginContainerAudio/button_audio" to="." method="_on_button_audio_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/MarginContainerVideo/button_video" to="." method="_on_button_video_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/MarginContainerVideo/button_video" to="." method="_on_button_video_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/MarginContainerKeyBoard/button_keyboard" to="." method="_on_button_keyboard_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/MarginContainerKeyBoard/button_keyboard" to="." method="_on_button_keyboard_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/MarginContainerBack/button_back_to_main" to="." method="_on_button_back_to_main_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/MarginContainerBack/button_back_to_main" to="." method="_on_button_back_to_main_pressed"]
